# datamitsu

./: .actrc  .dockerignore  .editorconfig  .gitignore  .goreleaser.yml  .oxlintrc.json  .secrets.local.yml  .syncpackrc.json  AGENTS.md  LICENSE  README.md  Taskfile.yaml  cspell.config.js  eslint.config.js  go.mod  go.sum  knip.config.js  lefthook.yaml  llms.txt  main.go  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/: CODEOWNERS  dependabot.yml
.github/act/: event-release-unstable.json
.github/scripts/: normalize-binaries.sh  prepare-release-assets.sh
.github/workflows/: deploy-website.yml  pr-checks.yml  release-stable.yml  release-unstable.yml  release.yml  test-deploy-website.yml
cmd/: cache.go  check.go  check_test.go  config.go  config_loader.go  config_loader_test.go  config_lockfile.go  config_lockfile_test.go  devtools.go  devtools_apps.go  devtools_apps_test.go  devtools_bundles.go  devtools_bundles_test.go  devtools_fnm.go  devtools_fnm_test.go  devtools_github_test.go  devtools_pack_archive.go  devtools_pack_archive_test.go  devtools_platform_test.go  devtools_pull_runtimes.go  devtools_pull_runtimes_test.go  devtools_uv.go  devtools_uv_test.go  devtools_verify.go  devtools_verify_test.go  exec.go  exec_todo.go  fix.go  init.go  init_smart_test.go  init_test.go  lint.go  root.go  root_test.go  setup.go  setup_test.go  store.go  store_test.go  version.go
config/: config.d.ts  tsdown.config.ts
config/scripts/: generate-prompts.ts
config/src/: apps.ts  fnmApps.json  githubApps.json  main.ts  runtimes.json  runtimes.ts  uvApps.json
docker/: Dockerfile  Dockerfile.alpine
internal/appstate/: appstate.go  (+1 more)
packaging/: PACKAGE_README.md  README.md  pack.ts
packaging/python/: .gitignore  README.md  pyproject.toml
packaging/python/datamitsu/: __init__.py  __main__.py  _find_binary.py
packaging/python/templates/: pyproject.toml.template
scripts/: capture-demo.ts  create-test-archive.sh  docker-capture.sh
website/: .oxlintrc.json  docusaurus.config.ts  eslint.config.js  package.json  sidebars.ts  tsconfig.json
(+247 files in other folders)
